reorganized and made direct creation of FSTableDescriber instances happen at package scope

--- a/app/src/main/res/xml/profile_info.xml
+++ b/app/src/main/res/xml/profile_info.xml
@@ -4,4 +4,19 @@
     <profile_info _id="3" user_id="3" email_address="user_id_3@email.com" />
     <profile_info _id="4" user_id="2" email_address="user_id_2@email.com" />
     <profile_info _id="5" user_id="1" email_address="user_id_1@email.com" />
+    <profile_info _id="6" user_id="6" email_address="user_id_6@email.com" />
+    <profile_info _id="7" user_id="7" email_address="user_id_7@email.com" />
+    <profile_info _id="8" user_id="8" email_address="user_id_8@email.com" />
+    <profile_info _id="9" user_id="9" email_address="user_id_9@email.com" />
+    <profile_info _id="10" user_id="10" email_address="user_id_10@email.com" />
+    <profile_info _id="11" user_id="15" email_address="user_id_15@email.com" />
+    <profile_info _id="12" user_id="14" email_address="user_id_14@email.com" />
+    <profile_info _id="13" user_id="13" email_address="user_id_13@email.com" />
+    <profile_info _id="14" user_id="12" email_address="user_id_12@email.com" />
+    <profile_info _id="15" user_id="11" email_address="user_id_11@email.com" />
+    <profile_info _id="16" user_id="16" email_address="user_id_16@email.com" />
+    <profile_info _id="17" user_id="17" email_address="user_id_17@email.com" />
+    <profile_info _id="18" user_id="18" email_address="user_id_18@email.com" />
+    <profile_info _id="19" user_id="19" email_address="user_id_19@email.com" />
+    <profile_info _id="20" user_id="20" email_address="user_id_20@email.com" />
 </resources>
