--- a/app/src/main/res/xml/user.xml
+++ b/app/src/main/res/xml/user.xml
@@ -4,4 +4,19 @@
     <user _id="3" global_id="3" />
     <user _id="4" global_id="4" />
     <user _id="5" global_id="5" />
+    <user _id="6" global_id="6" />
+    <user _id="7" global_id="7" />
+    <user _id="8" global_id="8" />
+    <user _id="9" global_id="9" />
+    <user _id="10" global_id="10" />
+    <user _id="11" global_id="11" />
+    <user _id="12" global_id="12" />
+    <user _id="13" global_id="13" />
+    <user _id="14" global_id="14" />
+    <user _id="15" global_id="15" />
+    <user _id="16" global_id="16" />
+    <user _id="17" global_id="17" />
+    <user _id="18" global_id="18" />
+    <user _id="19" global_id="19" />
+    <user _id="20" global_id="20" />
 </resources>
