--- a/app/src/main/res/layout/profile_info_layout.xml
+++ b/app/src/main/res/layout/profile_info_layout.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent">
     <TextView
         android:id="@+id/profile_info_id_text"
-        android:layout_weight="1"
+        android:layout_weight="0.5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
     <TextView
@@ -16,6 +16,11 @@
     <TextView
         android:id="@+id/email_address_text"
         android:layout_weight="2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/binary_data_text"
+        android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
 </LinearLayout>
