--- a/compiler/src/main/resources/setter_interface.vm
+++ b/compiler/src/main/resources/setter_interface.vm
@@ -1,4 +1,7 @@
 package ${packageName};
 
 public interface ${className} {
+#foreach($methodDefinition in $methodDefinitions)
+    $methodDefinition
+#end
 }
