make generated setter interfaces fluent apis and extending FSSaveApi; create adapter for creating instances of the setters apis

--- a/compiler/src/main/resources/setter_interface.vm
+++ b/compiler/src/main/resources/setter_interface.vm
@@ -1,6 +1,9 @@
 package ${packageName};
 
-public interface ${className} {
+import com.forsuredb.FSSaveApi;
+import com.forsuredb.annotation.FSColumn;
+
+public interface ${className} extends FSSaveApi {
 #foreach($methodDefinition in $methodDefinitions)
     $methodDefinition
 #end
