add a bunch of interfaces; code generator now relies upon the resultParameter System property; correctly upserting via the save method

--- a/compiler/src/main/resources/setter_interface.vm
+++ b/compiler/src/main/resources/setter_interface.vm
@@ -3,7 +3,7 @@ package ${packageName};
 import com.forsuredb.FSSaveApi;
 import com.forsuredb.annotation.FSColumn;
 
-public interface ${className} extends FSSaveApi {
+public interface ${className} extends FSSaveApi#if( $resultParameter )<$resultParameter>#end {
 #foreach($methodDefinition in $methodDefinitions)
     $methodDefinition
 #end
