first working migration xml generation

--- a/compiler/src/main/resources/migration.vm
+++ b/compiler/src/main/resources/migration.vm
@@ -2,7 +2,7 @@ package $packageName;
 
 import java.util.Date;
 
-import com.forsuredb.Migration;
+import com.forsuredb.annotationprocessor.Migration;
 
 public class $className extends Migration {
 
