edit example app to show created, deleted, and modified columns

--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -11,7 +11,7 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:layout_width="match_parent"
         android:layout_height="0dp">
         <TextView
@@ -30,7 +30,22 @@
                 android:layout_height="match_parent">
                 <TextView
                     android:text="_id"
-                    android:layout_weight="0.5"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"/>
+                <TextView
+                    android:text="created"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"/>
+                <TextView
+                    android:text="deleted"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"/>
+                <TextView
+                    android:text="modified"
+                    android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"/>
                 <TextView
@@ -50,7 +65,7 @@
                     android:layout_height="match_parent"/>
                 <TextView
                     android:text="competitor_app_rating"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"/>
             </LinearLayout>
@@ -63,7 +78,7 @@
         android:layout_height="0dp" />
     <LinearLayout
         android:orientation="vertical"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:layout_width="match_parent"
         android:layout_height="0dp">
         <TextView
@@ -82,7 +97,22 @@
                 android:layout_height="match_parent">
                 <TextView
                     android:text="_id"
-                    android:layout_weight="0.5"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"/>
+                <TextView
+                    android:text="created"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"/>
+                <TextView
+                    android:text="deleted"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"/>
+                <TextView
+                    android:text="modified"
+                    android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"/>
                 <TextView
@@ -92,12 +122,12 @@
                     android:layout_height="match_parent"/>
                 <TextView
                     android:text="email_address"
-                    android:layout_weight="2"
+                    android:layout_weight="4"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"/>
                 <TextView
                     android:text="binary_data"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"/>
             </LinearLayout>
@@ -110,7 +140,7 @@
         android:layout_height="0dp" />
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:layout_width="match_parent"
         android:layout_height="0dp">
         <Button
