--- a/app/src/main/res/layout/user_row_layout.xml
+++ b/app/src/main/res/layout/user_row_layout.xml
@@ -5,9 +5,24 @@
               android:layout_height="match_parent">
     <TextView
         android:id="@+id/user_id_text"
-        android:layout_weight="0.5"
+        android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/user_created_text"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"/>
+    <TextView
+        android:id="@+id/user_deleted_text"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"/>
+    <TextView
+        android:id="@+id/user_modified_text"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"/>
     <TextView
         android:id="@+id/user_global_id_text"
         android:layout_weight="1"
@@ -25,7 +40,7 @@
         android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/competitor_app_rating"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
 </LinearLayout>
