break implicit dependency of the compiler project on the forsuredbandroidproject; re-implement static data functionality

--- a/compiler/src/main/resources/table_creator.vm
+++ b/compiler/src/main/resources/table_creator.vm
@@ -3,7 +3,7 @@ package ${packageName};
 import java.util.List;
 import java.util.LinkedList;
 
-import com.forsuredb.FSTableCreator;
+import com.forsuredb.api.FSTableCreator;
 
 public class ${className} {
 
