--- a/app/src/main/res/layout/profile_info_layout.xml
+++ b/app/src/main/res/layout/profile_info_layout.xml
@@ -38,4 +38,9 @@
         android:layout_weight="2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/awesome_text"
+        android:layout_weight="2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
