--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -71,8 +71,8 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-    <ListView
-        android:id="@+id/user_list_view"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/user_recycler_view"
         android:layout_weight="5"
         android:layout_width="match_parent"
         android:layout_height="0dp" />
@@ -138,8 +138,8 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-    <ListView
-        android:id="@+id/profile_info_list_view"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/profile_info_recycler_view"
         android:layout_weight="5"
         android:layout_width="match_parent"
         android:layout_height="0dp" />
