--- a/app/src/main/res/menu/menu_test.xml
+++ b/app/src/main/res/menu/menu_test.xml
@@ -2,8 +2,12 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".TestActivity">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
-          android:orderInCategory="100"
-          app:showAsAction="never"/>
+    <item android:id="@+id/action_test_doc_store"
+        android:title="@string/test_doc_store"
+        android:orderInCategory="100"
+        app:showAsAction="never"/>
+    <item android:id="@+id/action_test_relational"
+        android:title="@string/test_relational_tables"
+        android:orderInCategory="100"
+        app:showAsAction="never"/>
 </menu>
