--- a/app/src/main/res/layout/user_row_layout.xml
+++ b/app/src/main/res/layout/user_row_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="@dimen/list_entry_height">
     <TextView
         android:id="@+id/user_id_text"
         android:layout_weight="1"
