--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="doc_store_test_item_layout_width">280dp</dimen>
+    <dimen name="list_entry_height">64dp</dimen>
 </resources>
