--- a/app/src/main/res/layout/doc_store_test_item.xml
+++ b/app/src/main/res/layout/doc_store_test_item.xml
@@ -1,22 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="@dimen/doc_store_test_item_layout_width"
-    android:layout_height="match_parent">
+    android:orientation="horizontal"
+    android:layout_gravity="center_vertical"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/doc_store_test_item_layout_height">
+    <TextView
+        android:id="@+id/class_name_text"
+        android:layout_weight="2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/uuid_text"
-        android:layout_width="match_parent"
+        android:layout_weight="2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/name_text"
-        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/date_text"
-        android:layout_width="match_parent"
+        android:layout_weight="2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/value_text"
-        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content" />
 </LinearLayout>
